@@ -1,7 +1,11 @@
 ===v4.5.1===
  * You can now shift-click links into the Announcement Editbox.
  * You can now shift-click links into the Choose Name/ID Editbox to insert a spellID/itemID.
+ * New text output locations:
+ ** Smart Channel
+ ** Chat Frame
  * Bug Fixes:
+ ** Attempted a possible fix to the error 132s that some people are getting when they close the icon editor after viewing the group settings tab.
  ** The "Ignore Runes" setting should no longer appear for item cooldown icons
  ** Meta icons should now inherit icon properties from other icons a little better.
 
